End of Section 10-11

--- a/Azad.API/appsettings.json
+++ b/Azad.API/appsettings.json
@@ -12,5 +12,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "CloudinarySettings": {
+    "CloudName": "dodmmwvp3",
+    "ApiKey": "989556745986538",
+    "ApiSecret": "SHLFY09AbNkJGpc0hnXH2xdl4Yg"
+  }
 }
