--- a/Azad.API/Azad.Api.csproj
+++ b/Azad.API/Azad.Api.csproj
@@ -10,7 +10,9 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.0-preview.7.20365.15"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.0-preview.7.20365.15"/>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.6"/>
-    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="4.0.1"/>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="7.0.0"/>
     <PackageReference Include="CloudinaryDotNet" Version="1.11.0"/>
+    <PackageReference Include="Microsoft.AspNetCore.Diagnostics" Version="2.2.0"/>
+    <PackageReference Include="Microsoft.AspNetCore" Version="2.2.0"/>
   </ItemGroup>
 </Project>
